2009-11-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Reorganized unit-tests

2009-11-25  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.0.1

2009-11-20  Xavier Perseguers  <typo3@perseguers.ch>

	* Added unit-test for bug #5708: Fieldmapping doesn't work on the "right side" in where clause with table.field
	* Fixed bugs #5044/#11142: Column's default value is not properly quoted in CREATE TABLE
	* Added unit-test for bug #12670: Columns with NOT NULL are created as NULLable

2009-11-17  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.0.0 (stable)
	* Updated documentation: updated copyright and refreshed TOC
	* Added unit-test for bug #4466: Index on tx_realurl_uniqalias breaks with DBAL

2009-11-16  Xavier Perseguers  <typo3@perseguers.ch>

	* Now using Core dispatcher for backend module (thanks to Oliver Hader)

2009-11-15  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12596: RIGHT OUTER JOIN is not supported

2009-11-11  Xavier Perseguers  <typo3@perseguers.ch>

	* Added unit test for bug #11093: bigint (int8) values get converted to int4 by int-cast 

2009-11-10  Xavier Perseguers  <typo3@perseguers.ch>

	* Removed comments stating that SQL parser is experimental
	* Follow-up of revision 26334: LIKE on Oracle should use dbms_lob.instr() function
	* Updated Oracle unit tests to use $GLOBALS['TYPO3_DB'] instead of a fixture to avoid side-effects on SQL rewriting
	* Updated general database unit tests to use $GLOBALS['TYPO3_DB'] instead of a fixture to avoid side-effects on SQL rewriting

2009-11-09  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #10965: Float database field gets converted to integer on insert (thanks to Christian Ducrot)
	* Fixed bug #12515: DAM-related: CONCAT operator cannot be used after LIKE
	* Fixed bug #10411: Applied missing chunks of patch

2009-11-07  Xavier Perseguers  <typo3@perseguers.ch>

	* Added unit test for RFC #6198: Problem with strings in IN