@@ -1,6 +1,10 @@
+2009-11-29  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Set version to 1.0.2 [TYPO3 4.3.0]
+
 2009-11-27  Xavier Perseguers  <typo3@perseguers.ch>
 
-	* Reorganized unit-tests
+	* Cleanup: Reorganized unit-tests
 
 2009-11-25  Xavier Perseguers  <typo3@perseguers.ch>
 
